<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UniversitySelectron</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Name</string>
    <string name="contact_no">Phone Number</string>
    <string name="phoneHint">Enter full valid phone number</string>
    <string name="emailId">Email ID</string>
    <string name="country">Country</string>
    <string name="course">Course</string>
    <string name="area_of_interest">Area Of Interest</string>
    <string name="specialisation">Specialisation</string>
    <string name="name_of_university">Name Of University</string>
    <string name="gpa">GPA</string>
    <string name="backlog_count">Number of Backlogs</string>
    <string name="research_work">Research Work</string>
    <string name="other_certification">Other Certifications/achievements</string>
    
     <string name="work_experience">Work Experience</string>
     
     <string-array name="listOfColleges">
      <item>   Massachusetts Institute of Technology</item>
<item>Stanford University</item>
<item>University of California- Berkeley</item>
<item>University of Illinois – Urbana Champaign</item>
<item>University of Michigan Ann Arbor</item>
<item>Cornell University</item>
<item>University of Texas at Austin</item>
<item>University of Maryland – College park</item>
<item>University of California – San Diego</item>
<item>California Institute of Technology</item>
<item>University of Wisconsin- Madison</item>
<item>University of California Los Angles</item>
<item>Harvard Universit</item>
<item>Carnegie Mellon University</item>
<item>Duke University</item>
<item>University of Washington – Seattle</item>
<item>University of Minnesota</item>
<item>Columbia University</item>
<item>Yale University</item>
<item>Ohio State University</item>
<item>University of Pittsburgh</item>
<item>Brown university (RI)</item>
<item>John Hopkins University</item>
<item>North Carolina State University</item>
<item>Dartmouth College, NH</item>
<item>Iowa State University</item>
<item>University of California- Santa Barbara</item>
<item>Case Western Reserve University</item>
<item>Northwestern University (IL)</item>
<item>Arizona State University</item>
<item>University of Iowa</item>
<item>Rutgers, State Univ of NJ, New Brunswick</item>
<item>Rice University</item>
<item>University of Rochester</item>
<item>University of Virginia</item>
<item>University of Pennsylvania</item>
<item>Northern Illinois University</item>
<item>Indiana University Purdue University</item>
<item>University of Memphis</item>
<item>University of Nevada Los Vegas</item>
<item>University of Alabama-Huntsville</item>
<item>University of Idaho</item>
<item>Mississippi State university</item>
<item>University of Missouri, Kansas City</item>
<item>University of North Carolina-Charlotte</item>
<item>George Mason University</item>
<item>University of Indianapolis</item>
<item>University of Nebraska Omaha</item>
<item>University of South Florida- Tampa</item>
<item>Middle Tennessee State University</item>
<item>Polytechnic University (NY)</item>
<item>University of New Orleans</item>
<item>University of Arkansas- Fayetteville</item>
<item>Tennessee Technological University</item>
<item>University of South Florida</item>
<item>University of Louisiana-Lafayette</item>
<item>Florida Institute of Technology</item>
<item>Illinois Institute of Technology</item>
<item>Washington State University</item>
<item>Georgia State University</item>
</string-array>
     
 <string-array name="countries_array">
<item>Afghanistan</item>
<item>Albania</item>
<item>Algeria</item>
<item>American Samoa</item>
<item>Andorra</item>
<item>Angola</item>
<item>Anguilla</item>
<item>Antarctica</item>
<item>Antigua and Barbuda</item>
<item>Argentina</item>
<item>Armenia</item>
<item>Aruba</item>
<item>Australia</item>
<item>Austria</item>
<item>Azerbaijan</item>
<item>Bahrain</item>
<item>Bangladesh</item>
<item>Barbados</item>
<item>Belarus</item>
<item>Belgium</item>
<item>Belize</item>
<item>Benin</item>
<item>Bermuda</item>
<item>Bhutan</item>
<item>Bolivia</item>
<item>Bosnia and Herzegovina</item>
<item>Botswana</item>
<item>Bouvet Island</item>
<item>Brazil</item>
<item>British Indian Ocean Territory</item>
<item>British Virgin Islands</item>
<item>Brunei</item>
<item>Bulgaria</item>
<item>Burkina Faso</item>
<item>Burundi</item>
<item>Cambodia</item>
<item>Cameroon</item>
<item>Canada</item>
<item>Cape Verde</item>
<item>Cayman Islands</item>
<item>Central African Republic</item>
<item>Chad</item>
<item>Chile</item>
<item>China</item>
<item>Christmas Island</item>
<item>Cocos (Keeling) Islands</item>
<item>Colombia</item>
<item>Comoros</item>
<item>Congo</item>
<item>Cook Islands</item>
<item>Costa Rica</item>
<item>Cote d\'Ivoire</item>
<item>Croatia</item>
<item>Cuba</item>
<item>Cyprus</item>
<item>Czech Republic</item>
<item>Democratic Republic of the Congo</item>
<item>Denmark</item>
<item>Djibouti</item>
<item>Dominica</item>
<item>Dominican Republic</item>
<item>East Timor</item>
<item>Ecuador</item>
<item>Egypt</item>
<item>El Salvador</item>
<item>Equatorial Guinea</item>
<item>Eritrea</item>
<item>Estonia</item>
<item>Ethiopia</item>
<item>Faeroe Islands</item>
<item>Falkland Islands</item>
<item>Fiji</item>
<item>Finland</item>
<item>Former Yugoslav Republic of Macedonia</item>
<item>France</item>
<item>French Guiana</item>
<item>French Polynesia</item>
<item>French Southern Territories</item>
<item>Gabon</item>
<item>Georgia</item>
<item>Germany</item>
<item>Ghana</item>
<item>Gibraltar</item>
<item>Greece</item>
<item>Greenland</item>
<item>Grenada</item>
<item>Guadeloupe</item>
<item>Guam</item>
<item>Guatemala</item>
<item>Guinea</item>
<item>Guinea-Bissau</item>
<item>Guyana</item>
<item>Haiti</item>
<item>Heard Island and McDonald Islands</item>
<item>Honduras</item>
<item>Hong Kong</item>
<item>Hungary</item>
<item>Iceland</item>
<item>India</item>
<item>Indonesia</item>
<item>Iran</item>
<item>Iraq</item>
<item>Ireland</item>
<item>Israel</item>
<item>Italy</item>
<item>Jamaica</item>
<item>Japan</item>
<item>Jordan</item>
<item>Kazakhstan</item>
<item>Kenya</item>
<item>Kiribati</item>
<item>Kuwait</item>
<item>Kyrgyzstan</item>
<item>Laos</item>
<item>Latvia</item>
<item>Lebanon</item>
<item>Lesotho</item>
<item>Liberia</item>
<item>Libya</item>
<item>Liechtenstein</item>
<item>Lithuania</item>
<item>Luxembourg</item>
<item>Macau</item>
<item>Madagascar</item>
<item>Malawi</item>
<item>Malaysia</item>
<item>Maldives</item>
<item>Mali</item>
<item>Malta</item>
<item>Marshall Islands</item>
<item>Martinique</item>
<item>Mauritania</item>
<item>Mauritius</item>
<item>Mayotte</item>
<item>Mexico</item>
<item>Micronesia</item>
<item>Moldova</item>
<item>Monaco</item>
<item>Mongolia</item>
<item>Montserrat</item>
<item>Morocco</item>
<item>Mozambique</item>
<item>Myanmar</item>
<item>Namibia</item>
<item>Nauru</item>
<item>Nepal</item>
<item>Netherlands</item>
<item>Netherlands Antilles</item>
<item>New Caledonia</item>
<item>New Zealand</item>
<item>Nicaragua</item>
<item>Niger</item>
<item>Nigeria</item>
<item>Niue</item>
<item>Norfolk Island</item>
<item>North Korea</item>
<item>Northern Marianas</item>
<item>Norway</item>
<item>Oman</item>
<item>Pakistan</item>
<item>Palau</item>
<item>Panama</item>
<item>Papua New Guinea</item>
<item>Paraguay</item>
<item>Peru</item>
<item>Philippines</item>
<item>Pitcairn Islands</item>
<item>Poland</item>
<item>Portugal</item>
<item>Puerto Rico</item>
<item>Qatar</item>
<item>Reunion</item>
<item>Romania</item>
<item>Russia</item>
<item>Rwanda</item>
<item>Sqo Tome and Principe</item>
<item>Saint Helena</item>
<item>Saint Kitts and Nevis</item>
<item>Saint Lucia</item>
<item>Saint Pierre and Miquelon</item>
<item>Saint Vincent and the Grenadines</item>
<item>Samoa</item>
<item>San Marino</item>
<item>Saudi Arabia</item>
<item>Senegal</item>
<item>Seychelles</item>
<item>Sierra Leone</item>
<item>Singapore</item>
<item>Slovakia</item>
<item>Slovenia</item>
<item>Solomon Islands</item>
<item>Somalia</item>
<item>South Africa</item>
<item>South Georgia and the South Sandwich Islands</item>
<item>South Korea</item>
<item>Spain</item>
<item>Sri Lanka</item>
<item>Sudan</item>
<item>Suriname</item>
<item>Svalbard and Jan Mayen</item>
<item>Swaziland</item>
<item>Sweden</item>
<item>Switzerland</item>
<item>Syria</item>
<item>Taiwan</item>
<item>Tajikistan</item>
<item>Tanzania</item>
<item>Thailand</item>
<item>The Bahamas</item>
<item>The Gambia</item>
<item>Togo</item>
<item>Tokelau</item>
<item>Tonga</item>
<item>Trinidad and Tobago</item>
<item>Tunisia</item>
<item>Turkey</item>
<item>Turkmenistan</item>
<item>Turks and Caicos Islands</item>
<item>Tuvalu</item>
<item>Virgin Islands</item>
<item>Uganda</item>
<item>Ukraine</item>
<item>United Arab Emirates</item>
<item>United Kingdom</item>
<item>United States</item>
<item>United States Minor Outlying Islands</item>
<item>Uruguay</item>
<item>Uzbekistan</item>
<item>Vanuatu</item>
<item>Vatican City</item>
<item>Venezuela</item>
<item>Vietnam</item>
<item>Wallis and Futuna</item>
<item>Western Sahara</item>
<item>Yemen</item>
<item>Yugoslavia</item>
<item>Zambia</item>
<item>Zimbabwe</item>
</string-array>
<string name="gpa_hint">for 4.0 or 100%</string>
<string name="prefs_name">Preferences</string>
<!-- screen 2 -->
<string name="location">Locations Preferred</string>
<string name="budget">Budget</string>
<string name="lCollege">Interested Universities</string>
<string name="takenTest">Taken Any Test</string>
<string name="textTakenTestYes">Yes</string>
<string name="textTakenTestNo">No</string>

<!-- screen 3 -->
<string name="gre">Gre Score:</string>
<string name="Quant">Quant</string>
<string name="Verbal">Verbal</string>
<string name="awa">AWA</string>
<string name="toefl">Toefl Score:</string>
<string name="ielts">Ielts Score:</string>
<string name="college_advice_name">best of luck for future endeavout</string>
<string name="news_name">Latest News</string>
<string name="scores_name">Scores please</string>
<string name="scores_advice_name">Hope it helps you...!!</string>
<string name="tips_name">Tips</string>
<string name="change_user">Change User</string>
<string name="webA_name">Website</string>
<string name="gretip1">#1: Get it together. Pack up the day before so you don’t have to go scrambling around in the morning. Get your admission ticket, ID, water, and nonsugar energy snack all ready to go.  </string>
<string name="gretip2">#2: If you can rule out even one wrong answer, youll be in a much better spot for guessing if it comes to that. Instead of looking for the "right" answer per se, look for the "least wrong" answer. </string>
<string name="greNews1">Feb 11, 2014 Interest from International and Business School Audiences Drives GRE® Volumes to Second Highest Level in History </string>
<string name="greNews2">Jan 23, 2014 ETS Releases the Most Comprehensive Data on GRE® Test Takers Worldwide</string>

</resources>
