<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >


    <RelativeLayout
        
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:background="@drawable/background1"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity" >

        <EditText
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/text_name"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="#a5d4e2" >

          
        </EditText>

        <TextView
            android:id="@+id/text_name"
            android:textColor="#a5d4e2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/Name"
            android:layout_alignParentLeft="true"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/phoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Name"
            android:layout_toRightOf="@+id/tv_advice"
            android:ems="10"
            android:hint="@string/phoneHint"
            android:inputType="phone" 
            android:textColor="#a5d4e2"/>

        <TextView
            android:id="@+id/tv_advice"
            android:textColor="#a5d4e2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/phoneNum"
            android:layout_alignParentLeft="true"
            android:text="@string/contact_no"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/emailID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneNum"
            android:layout_toRightOf="@+id/textView2"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="#a5d4e2" />

        <TextView
            android:id="@+id/textView2"
            android:textColor="#a5d4e2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/emailID"
            android:layout_alignParentLeft="true"
            android:text="@string/emailId"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView3"
            android:textColor="#a5d4e2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/country_list"
            android:layout_alignParentLeft="true"
            android:text="@string/country"
            android:textAppearance="?android:attr/textAppearanceSmall"
             />

        <EditText
            android:id="@+id/course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/country_list"
            android:layout_toRightOf="@+id/textView4"
            android:ems="10"
            android:inputType="text" 
            android:textColor="#a5d4e2"/>

        <TextView
            android:id="@+id/textView4"
            android:textColor="#a5d4e2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/course"
            android:layout_alignParentLeft="true"
            android:text="@string/course"
            android:textAppearance="?android:attr/textAppearanceSmall" 
            />

        <EditText
            android:id="@+id/areaOfInterest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/course"
            android:layout_toRightOf="@+id/textView5"
            android:ems="10"
            android:textColor="#a5d4e2"
            android:hint="@string/specialisation" />

        <TextView
            android:id="@+id/textView5"
            android:textColor="#a5d4e2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/areaOfInterest"
            android:layout_alignParentLeft="true"
            android:text="@string/area_of_interest"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/UniversityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/areaOfInterest"
            android:textColor="#a5d4e2"
            android:layout_toRightOf="@+id/textView6"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView6"
            android:textColor="#a5d4e2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/UniversityName"
            android:layout_alignParentLeft="true"
            android:text="@string/name_of_university"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/gpa"
            android:textColor="#a5d4e2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/UniversityName"
            android:layout_toRightOf="@+id/textView7"
            android:ems="10"
            android:hint="@string/gpa_hint"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView7"
            android:textColor="#a5d4e2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/gpa"
            android:layout_alignParentLeft="true"
            android:text="@string/gpa"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/backlogsCount"
            android:layout_width="match_parent"
            android:textColor="#a5d4e2"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gpa"
            android:layout_toRightOf="@+id/textView8"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView8"
            android:textColor="#a5d4e2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/backlogsCount"
            android:text="@string/backlog_count"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/workExperience"
            android:layout_width="match_parent"
            android:textColor="#a5d4e2"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView9"
            android:ems="10"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/textView10"
            android:textColor="#a5d4e2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/workExperience"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:text="@string/research_work"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:textColor="#a5d4e2"
            android:id="@+id/reseachWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView10"
            android:ems="10"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/textView11"
            android:textColor="#a5d4e2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reseachWork"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:text="@string/other_certification"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:textColor="#a5d4e2"
            android:id="@+id/certification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView11"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Spinner
            android:textColor="#a5d4e2"
            android:id="@+id/country_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailID"
            android:layout_toRightOf="@+id/textView2"
            android:ems="10" />

        <TextView
            android:id="@+id/textView9"
            android:textColor="#a5d4e2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/backlogsCount"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:text="@string/work_experience"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>
</ScrollView>
