<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView3"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background3"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        
        tools:context=".MainActivity" >

        <TextView
            android:id="@+id/tv_gre"
            android:textColor="#a5d4e2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="50dp"
            android:text="@string/gre" />

        <EditText
            android:id="@+id/et_quant"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_verbal"
            android:layout_alignBottom="@+id/et_verbal"
            android:layout_alignLeft="@+id/tv_gre"
            android:ems="10"
            android:hint="@string/Quant"
            android:inputType="number"
            android:textColor="#a5d4e2" />

        <EditText
            android:id="@+id/et_verbal"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_gre"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/et_quant"
            android:ems="10"
            android:hint="@string/Verbal"
            android:inputType="number"
            android:textColor="#a5d4e2" />

        <EditText
            android:id="@+id/et_awa"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/awa"
            android:layout_alignBaseline="@+id/et_verbal"
            android:layout_alignBottom="@+id/et_verbal"
            android:layout_toRightOf="@+id/et_verbal"
            android:ems="10"
            android:inputType="number"
            android:textColor="#a5d4e2" />

        <TextView
            android:id="@+id/tv_toefl"
            android:textColor="#a5d4e2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/et_quant"
            android:layout_below="@+id/et_quant"
            android:layout_marginTop="37dp"
            android:text="@string/toefl" />

        <EditText
            android:id="@+id/et_toefl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_toefl"
            android:layout_alignRight="@+id/et_awa"
            android:layout_marginLeft="11dp"
            android:layout_toRightOf="@+id/tv_gre"
            android:ems="10"
            android:inputType="number"
            android:textColor="#a5d4e2" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tv_ielts"
            android:textColor="#a5d4e2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_toefl"
            android:layout_below="@+id/tv_toefl"
            android:layout_marginTop="37dp"
            android:text="@string/ielts" />

        <EditText
            android:id="@+id/et_ielts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_ielts"
            android:layout_alignLeft="@+id/et_toefl"
            android:ems="10"
            android:inputType="number" 
            android:textColor="#a5d4e2"
            />
       
    </RelativeLayout>

</ScrollView>